styles.css
/*Global*/

:root {
	--black: #000000;
	--white: #FFFFFF;
	--dark-grey: #767676;
	--grey: #F4F4F4;
	--light-grey: #F1F1F1;
}

:root {
	--spacing-xxs: 8px;
	--spacing-xs: 16px;
	--spacing-s: 24px;
	--spacing-m: 32px;
	--spacing-l: 80px;
	--spacing-xl: 112px;
}

body {
	margin: 0;
}

/*Typography*/

h1 {
	font-family: 'Inter', sans-serif;
	font-size: 64px;
	color: var(--black);
	letter-spacing: -1px;
	font-weight: 600;
	line-height: normal;
	padding-bottom: var(--spacing-m);
	margin: 0;
}

h2 {
	font-family: 'Inter', sans-serif;
	font-size: 56px;
	color: var(--black);
	letter-spacing: -0.88px;
	font-weight: 600;
	line-height: normal;
	margin: 0;
}

h2 a {
	color: var(--black);
}

h3 {
	font-family: 'Inter', sans-serif;
	font-size: 32px;
	color: var(--black);
	letter-spacing: -0.5px;
	font-weight: 600;
	line-height: normal;
	margin: 0;
}

h4 {
	font-family: 'Inter', sans-serif;
	font-size: 16px;
	color: var(--dark-grey);
	letter-spacing: -0.25px;
	font-weight: 500;
	line-height: normal;
	margin: 0;
}

h5 {
	font-family: 'Inter', sans-serif;
	font-size: 20px;
	color: var(--black);
	letter-spacing: -0.31px;
	font-weight: 600;
	line-height: normal;
	margin: 0;
}

p {
	font-family: 'Inter', sans-serif;
	font-size: 18px;
	color: var(--black);
	letter-spacing: -0.28px;
	font-weight: 400;
	line-height: 30px;
	margin: 0;
	-webkit-font-smoothing: antialiased;
}

.smaller-p {
	font-family: 'Inter', sans-serif;
	font-size: 16px;
	color: var(--black);
	letter-spacing: -0.25px;
	text-align: center;
	font-weight: 400;
	line-height: 30px;
	padding: var(--spacing-l) 0 48px 0;
	margin: 0;
	-webkit-font-smoothing: antialiased;
}

/*General Styles*/

ul {
	margin: 0;
	padding: 0;
}

nav {
	height: 80px;
	background: var(--white);
}

.navigation {
	border-bottom: 1px solid rgba(0,0,0,0.1);
}

.nav-links {
	display: flex;
	list-style: none;
	align-items: center;
}

nav li {
	padding: var(--spacing-m) var(--spacing-xs);
}

nav li:first-child {
	padding-left: 0;
}

nav li a, .cta, .footer-cta a, .fixed-cta a {
	font-family: 'Inter', sans-serif;
	font-size: 14px;
	color: var(--black);
	letter-spacing: -0.25px;
	font-weight: 600;
	line-height: normal;
	text-decoration: none;
}

nav li a:after {
	border-bottom: solid 1px black;
    content: '';
    display: block;
    margin-top: 3px;
    transform: scaleX(0);
    transform-origin: left;
    transition: transform 250ms cubic-bezier(0.645, 0.045, 0.355, 1);
}

nav li a:hover:after {
	transform: scaleX(1);
}

.cta {
	padding: var(--spacing-m) 0;
	text-decoration: underline;
}

.hero {
	height: 632px;
	align-items: center;
}

.hero h1 {
	max-width: 900px;
}

.project-container h3 {
	margin: var(--spacing-l) 0 var(--spacing-m) 0;
}

.project-image {
	display: block;
	width: 100%;
	margin: var(--spacing-l) 0 var(--spacing-l) 0;
}

.project-container p {
	margin-bottom: var(--spacing-m);
}

.project-column {
	justify-content: center;
	flex-wrap: wrap;
	align-content: flex-end;
}

.project-title {
	width: 100%;
	display: grid;
	column-gap: var(--spacing-m);
	grid-template-columns: repeat(1, 1fr);
}

.project-title h1 {
	width: 100%;
	border-bottom: 1px solid #F1F1F1;
	margin-bottom: 32px;
}

.project-details {
	display: grid;
	column-gap: var(--spacing-m);
	grid-template-columns: repeat(1, 1fr);
	padding-bottom: var(--spacing-m);
	width: 100%;
}

.skills {
	display: grid;
	column-gap: var(--spacing-m);
	grid-template-columns: repeat(1, 1fr);
	row-gap: var(--spacing-xl);
	padding-bottom: var(--spacing-xl);
	width: 100%;
}

.skill-icon {
	height: 32px;
	width: 100%;
	padding: 0 0 var(--spacing-xs) 0;
}

.success-metrics {
	padding-bottom: var(--spacing-l);
	border-bottom: 1px solid #F1F1F1;
}

.success-icon {
	display: grid;
	column-gap: var(--spacing-xs);
	grid-template-columns: repeat(1, 32px 1fr);
	width: 100%;
	margin: 0 0 var(--spacing-xs) 0;
}

.success-icon:nth-child(4) {
	margin: 0;
}

.success-icon p {
	margin: 2px 0 0 0;
}

.smaller-p a {
	color: var(--black);
}

.project-detail h4 {
	padding-bottom: var(--spacing-xs);
}

.projects {
	display: grid;
	column-gap: var(--spacing-m);
	grid-template-columns: repeat(1, 1fr);
	grid-row-gap: var(--spacing-l);
	padding-bottom: var(--spacing-xl);
}

.project-card {
	cursor: pointer;
}

.project-card a {
	text-decoration: none;
}

.blur-hover {
	overflow: hidden;
	position: relative;
	display: flex;
	align-items: center;
	justify-content: center;
}

.blur-hover h5 {
	position: absolute;
	opacity: 0;
	color: var(--white);
	transition: all 0.45s ease;

}

.project-card:hover h5 {
	opacity: 1;
}

.project-card img {
	display: block;
	height: 100%;
	width: 100%;
	transition: all 0.45s ease;
	backface-visibility: hidden;
}

.project-card h3 {
	padding-top: var(--spacing-m);
}

.project-card:hover img {
	filter: blur(22px);
}

.what-i-do h2 {
	padding-bottom: var(--spacing-xl);
}

.footer {
	background-color: #1F2225;
	height: 500px;
	align-items: center;
}

.footer h2 {
	text-align: center;
	color: var(--white);
	padding: 0 0 var(--spacing-m) 0;
}

.footer h4 {
	text-align: center;
}

.footer h4 a {
	text-decoration: none;
	color: var(--dark-grey);
}

.footer h4 a:hover {
	text-decoration: underline;
}

.footer .project-details {
	padding-top: var(--spacing-l);
	grid-template-columns: repeat(1, 1fr);
}

.footer-cta {
	display: flex;
	margin: 0 auto;
	background-color: var(--white);
	width: 168px;
	height: 48px;
}

.footer-cta a, .fixed-cta a {
	font-size: 14px;
	display: block;
	width: 100%;
    height: 100%;
    text-align: center;
    line-height: 3.4;
}

.social-links {
	padding: var(--spacing-l) 0 0 0;
}

.fixed-cta {
	display: flex;
	position: fixed;
	justify-content: center;
	align-items: center;
	background-color: var(--black);
	width: 168px;
	height: 48px;
	right: 0;
	bottom: 0;
	margin: 24px;
}

.fixed-cta a {
	color: var(--white);
}

/*Columns & Grid*/

.wrapper {
	padding: 0 var(--spacing-s);
}

.container {
	width: 100%;
	max-width: 1168px;
	margin: 0 auto;
}

.project-container {
	width: 100%;
	max-width: 868px;
	margin: 0 auto;
}

.status {
	display: flex;
	width: 100%;
	height: 608px;
	background-color: var(--grey);
	align-items: center;
	margin: 0 0 var(--spacing-xl) 0;
}

.status h2 {
	margin: 0 auto;
	padding: var(--spacing-xl) var(--spacing-m);
	max-width: 900px;
}

.col-12-lrg {
	display: flex;
	width: 100%;
}

/*Media Queries*/


@media (max-width: 900px){
	h2 {
		font-size: 40px;
	}

	.project-details {
		row-gap: var(--spacing-s);
	}

	.project-details h4 {
		padding-bottom: 8px;
	}
}


@media (max-width: 600px){
	.col-12-sml {
		width: 100%;
	}

	h1 {
		font-size: 48px;
	}

	h2 {
		font-size: 32px;
	}

	.project-details, .skills {
		row-gap: var(--spacing-s);
	}

	.project-details h4 {
		padding-bottom: 8px;
	}

	.success-icon {
		grid-template-columns: repeat(1, 1fr);
		row-gap: var(--spacing-xxs);
		padding-bottom: var(--spacing-s);
	}

	.line {
		width: 30px;
		height: 2px;
		background: var(--black);
		margin: var(--spacing-xxs) 0;
		transition: all 0.25s ease-in;
	}

	.navigation {
	    border-bottom: none;
	}

	.navigation .wrapper {
		padding: 0;
	}

	nav {
		position: fixed;
		width: 100%;
		background: none;
		border: none;
	}

	.hamburger {
		position: absolute;
		cursor: pointer;
		right: var(--spacing-s);
		z-index: 1;
		margin-top: var(--spacing-xs);
	}

	.hamburger.open .line:nth-child(1) {
	    transform: translateY(10px) rotate(45deg);
	}

	.hamburger.open .line:nth-child(2) {
	    opacity: 0;
	}

	.hamburger.open .line:nth-child(3) {
	    transform: translateY(-10px) rotate(-45deg);
	}

	.nav-links {
		position: fixed;
		background: var(--white);
		height: 100vh;
		width: 100%;
		flex-direction: column;
		clip-path: circle(100px at 114% -14%);
		-webkit-clip-path: circle(100px at 114% -14%);
		transition: all 0.6s ease-in-out;
		pointer-events: none;
		padding-top: 70px;
	}

	.nav-links.open {
		clip-path: circle(1400px at 90% -10%);
		-webkit-clip-path: circle(1400px at 90% -10%);
		pointer-events: all;
	}

	.cta {
		display: none;
	}

	.nav-links li {
		padding: var(--spacing-s) var(--spacing-s);
		width: 100%;
		border-top: 1px solid rgba(0,0,0,0.1);
		animation: fade-in 1000ms ease forwards, slide-in-right 1000ms ease forwards;
	    opacity: 0;
	}

	.nav-links li a {
		padding-left: 24px;
	}

	.nav-links li:nth-child(1) {
		animation-delay: calc((0 * 70ms) + 750ms);
	}

	.nav-links li:nth-child(2) {
		animation-delay: calc((1 * 70ms) + 750ms);
	}

	.nav-links li:nth-child(3) {
		animation-delay: calc((2 * 70ms) + 750ms);
	}

	.nav-links li:nth-child(4) {
		animation-delay: calc((3 * 70ms) + 750ms);
	}

	nav li:first-child {
		padding-left: var(--spacing-s);
	}

	nav li:last-child {
		border-bottom: 1px solid rgba(0,0,0,0.1);
	}

	nav li a:after {
		display: none;
	}

@keyframes fade-in {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

@keyframes slide-in-right {
  from {
    transform: translate(-15px, 0);
  }

  to {
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
    transform: translate(0, 0);
  }
}

/*Variable Media Queries*/

	:root {
	--spacing-l: 48px;
	--spacing-xl: 80px;
}

}

/*Mobile First Media Queries*/

@media (min-width: 375px){
/*	.projects {
		margin: 0 auto;
	}*/
}

@media (min-width: 600px){
	.projects, .project-details, .skills {
		grid-template-columns: repeat(2, 1fr);
	}
}

@media (min-width: 900px){
	.projects, .project-details {
		grid-template-columns: repeat(3, 1fr);
	}
	
	.skills {
		grid-template-columns: repeat(4, 1fr);
	}
}

